--- a/webauthn.html
+++ b/webauthn.html
@@ -25,7 +25,7 @@
 
             const publicKey = {
                 challenge: challenge,
-                rp: { id: "*.github.io", name: "WebAuthn 測試" },
+                rp: { id: "github.io", name: "WebAuthn 測試" },
                 user: {
                     id: new Uint8Array(16),
                     name: "testuser3@example.com",
