--- a/webauthn.html
+++ b/webauthn.html
@@ -22,10 +22,14 @@
         async function registerWebAuthn() {
             const challenge = new Uint8Array(32);
             window.crypto.getRandomValues(challenge);
-
+            const rpIds = {
+              "github.io": "github.io",
+              "sth123654sth.github.io": "sth123654sth.github.io"
+            };
+            const currentRpId = rpIds[window.location.hostname];
             const publicKey = {
                 challenge: challenge,
-                rp: { id: "github.io", name: "WebAuthn 測試" },
+                rp: currentRpId,
                 user: {
                     id: new Uint8Array(16),
                     name: "testuser3@example.com",
