--- a/webauthn.html
+++ b/webauthn.html
@@ -26,7 +26,9 @@
             const rpId = window.location.hostname.includes(".github.io") ? "github.io" : window.location.hostname;
             const publicKey = {
                 challenge: challenge,
-                rp: rpId,
+                rp: { id: rpId,
+                      name: "github.io"
+                    },     
                 user: {
                     id: new Uint8Array(16),
                     name: "testuser3@example.com",
